--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <body>
     {% include header.html %}
 
-    <div class="content-wrapper">
+    <div class="content-wrapper" style="{% if page.title %}display:block;{% else %}display:none;{% endif %}">
       <div class="content-wrapper__inner">
         {{ content }}
       </div>
@@ -13,4 +13,3 @@
       {% include footer.html %}
     </div>
   </body>
-</html>
