--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  {% if page.robots %}
-
-
+  <meta http-equiv="Content-Language" content="en">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | remove: '<p>' | remove: '</p>' }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description" content="{% if page.title %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="keywords" content="thedeploymentguy,shell,bash,python,openstack,devops,docker,swarm,container,kvm,gluster,golang,coros,kibana,elastic,cadvisor">
   <meta name="author" content="{{ site.author.name }}">
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
