--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,37 +13,39 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-  <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | remove: '<p>' | remove: '</p>' }}{% else %}{{ site.description }}{% endif %}">
-  {% if site.author.twitter_username %}
-  <meta name="twitter:creator" content="{{ site.author.twitter_username }}">
-  {% endif %}
-  <meta name="twitter:image" content="{{ site.baseurl }}/images/favicons/favicon-194x194.png" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@{{ site.author.twitter_username }}" />
+  <meta name="twitter:creator" content="@{{ site.author.twitter_username }}" />
+  <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta name="twitter:description" content="{% if page.title %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
+  <meta name="twitter:image" content="{{ site.url }}/images/card.jpg" />
+  <meta name="twitter:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}" />
 
-  <meta property="og:type" content="article">
-  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | remove: '<p>' | remove: '</p>' }}{% else %}{{ site.description }}{% endif %}">
-  <meta property="og:image" content="{{ site.baseurl }}/images/favicons/favicon-194x194.png" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta property="og:description" content="{% if page.title %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
+  <meta property="og:image" content="{{ site.url }}/images/card.jpg" />
+  <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}" />
 
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ "images/favicons/apple-touch-icon-57x57.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="60x60" href="{{ "images/favicons/apple-touch-icon-60x60.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{ "images/favicons/apple-touch-icon-72x72.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ "images/favicons/apple-touch-icon-76x76.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{ "images/favicons/apple-touch-icon-114x114.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ "images/favicons/apple-touch-icon-120x120.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ "images/favicons/apple-touch-icon-144x144.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ "images/favicons/apple-touch-icon-152x152.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ "images/favicons/apple-touch-icon-180x180.png" | prepend: site.baseurl }}">
-  <link rel="icon" type="image/png" href="{{ "images/favicons/favicon-32x32.png" | prepend: site.baseurl }}" sizes="32x32">
-  <link rel="icon" type="image/png" href="{{ "images/favicons/favicon-194x194.png" | prepend: site.baseurl }}" sizes="194x194">
-  <link rel="icon" type="image/png" href="{{ "images/favicons/favicon-96x96.png" | prepend: site.baseurl }}" sizes="96x96">
-  <link rel="icon" type="image/png" href="{{ "images/favicons/android-chrome-192x192.png" | prepend: site.baseurl }}" sizes="192x192">
-  <link rel="icon" type="image/png" href="{{ "images/favicons/favicon-16x16.png" | prepend: site.baseurl }}" sizes="16x16">
-  <link rel="manifest" href="{{ "images/favicons/manifest.json" | prepend: site.baseurl }}">
-  <link rel="shortcut icon" href="{{ "images/favicons/favicon.ico" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ "images/favicons/apple-touch-icon-57x57.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ "images/favicons/apple-touch-icon-60x60.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ "images/favicons/apple-touch-icon-72x72.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ "images/favicons/apple-touch-icon-76x76.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ "images/favicons/apple-touch-icon-114x114.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ "images/favicons/apple-touch-icon-120x120.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ "images/favicons/apple-touch-icon-144x144.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ "images/favicons/apple-touch-icon-152x152.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ "images/favicons/apple-touch-icon-180x180.png" | relative_url }}">
+  <link rel="icon" type="image/png" href="{{ "images/favicons/favicon-32x32.png" | relative_url }}" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ "images/favicons/favicon-194x194.png" | relative_url }}" sizes="194x194">
+  <link rel="icon" type="image/png" href="{{ "images/favicons/favicon-96x96.png" | relative_url }}" sizes="96x96">
+  <link rel="icon" type="image/png" href="{{ "images/favicons/android-chrome-192x192.png" | relative_url }}" sizes="192x192">
+  <link rel="icon" type="image/png" href="{{ "images/favicons/favicon-16x16.png" | relative_url }}" sizes="16x16">
+  <link rel="manifest" href="{{ "images/favicons/manifest.json" | relative_url }}">
+  <link rel="shortcut icon" href="{{ "images/favicons/favicon.ico" | relative_url }}">
   <meta name="msapplication-TileColor" content="#ffc40d">
-  <meta name="msapplication-TileImage" content="{{ "images/favicons/mstile-144x144.png" | prepend: site.baseurl }}">
+  <meta name="msapplication-TileImage" content="{{ "images/favicons/mstile-144x144.png" | relative_url }}">
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="{{ "css/main.css" | relative_url }}?v=1.4">
