--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
 
           <nav class="cover-navigation cover-navigation--primary">
             <ul class="navigation">
-              <li class="navigation__item"><a href="https://thedeploymentguy.github.io/blog/#blog" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
+              <li class="navigation__item"><a href="https://thedeploymentguy.github.io/blog/#blog/" title="link to {{ site.title }} blog" class="blog-button">Blog</a></li>
             </ul>
           </nav>
 
